--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#perjanjian">Perjanjian</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#deposit">Deposit</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -96,6 +99,38 @@
                 <p><strong>5. Kesepakatan:</strong></p>
                 <p>Dengan mengikuti investasi ini, investor menyatakan telah membaca dan menyetujui semua ketentuan yang
                     ada dalam perjanjian ini, serta siap menghadapi segala kemungkinan yang ada.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Deposit Information -->
+    <section id="deposit" class="container my-5">
+        <h2 class="text-center mb-4">Informasi Deposit</h2>
+        <div class="card">
+            <div class="card-header card-header-custom">
+                <h4 class="mb-0">Cara Melakukan Deposit</h4>
+            </div>
+            <div class="card-body">
+                <p><strong>1. Rekening untuk Transfer (Bank):</strong></p>
+                <p>Nomor Rekening: <strong>123-456-7890</strong></p>
+                <p>Nama Pemilik Rekening: <strong>John Doe</strong></p>
+                <p>Bank: <strong>Bank ABC</strong></p>
+
+                <p><strong>2. Deposit melalui Cryptocurrency:</strong></p>
+                <p>Alamat Wallet Bitcoin: <strong>1A2b3C4D5E6F7G8H9I0J</strong></p>
+                <p>Alamat Wallet Ethereum: <strong>0xA1B2C3D4E5F6G7H8I9J0K</strong></p>
+                <p>Pastikan menggunakan alamat yang sesuai dengan jenis cryptocurrency yang Anda pilih untuk transfer.</p>
+
+                <p><strong>3. Ketentuan Deposit:</strong></p>
+                <ul>
+                    <li>Investor wajib mentransfer dana sesuai dengan jumlah yang diinginkan ke nomor rekening bank atau alamat wallet crypto yang tertera di atas.</li>
+                    <li>Setelah melakukan transfer, investor diwajibkan untuk memasukkan nama sesuai dengan nama pada rekening yang digunakan untuk mentransfer dana dan alamat email yang aktif.</li>
+                    <li>Data transfer akan tervalidasi berdasarkan nomor rekening atau alamat crypto yang digunakan, dan investor akan dihubungi melalui email yang terdaftar untuk konfirmasi lebih lanjut.</li>
+                    <li>Investasi tidak akan diproses jika nama dan rekening yang digunakan tidak sesuai atau tidak terdaftar.</li>
+                </ul>
+
+                <p><strong>4. Pengembalian Investasi:</strong></p>
+                <p>Keuntungan atau kerugian yang terjadi setelah periode investasi akan disalurkan ke rekening atau alamat wallet yang sama yang digunakan untuk deposit. Kami tidak akan mentransfer dana ke rekening lain selain yang digunakan untuk deposit awal.</p>
             </div>
         </div>
     </section>
