--- a/index.html
+++ b/index.html
@@ -129,15 +129,15 @@
 
                 <p><strong>2. Deposit melalui Cryptocurrency:</strong></p>
                 <!-- Bitcoin -->
-                <p><a href="bitcoin:1A2b3C4D5E6F7G8H9I0J" class="crypto-link">
-                        <img src="https://www.cryptocompare.com/media/37746418/btc.png" alt="Bitcoin" class="crypto-logo">
-                        Bitcoin Address: <strong>1A2b3C4D5E6F7G8H9I0J</strong>
+                <p><a href="USDT-BEP20 (BSC NETWORK):0x6050a098846c97f75157667ef577f789edbefdd9" class="crypto-link">
+                        <img src="https://github.com/tradinginvestment/tradinginvestment.github.io/blob/main/crypto/BEP20USDT.png" alt="USDT-BEP20" class="crypto-logo">
+                        USDT BEP20 (BSC/ETH NETWORK) Address: <strong>0x6050a098846c97f75157667ef577f789edbefdd9</strong>
                     </a></p>
 
                 <!-- Ethereum -->
-                <p><a href="ethereum:0xA1B2C3D4E5F6G7H8I9J0K" class="crypto-link">
-                        <img src="https://www.cryptocompare.com/media/37746425/eth.png" alt="Ethereum" class="crypto-logo">
-                        Ethereum Address: <strong>0xA1B2C3D4E5F6G7H8I9J0K</strong>
+                <p><a href="USDT-ERC:TS7JLDA7XUAWCYDHucZWf63DRp9viSHxto" class="crypto-link">
+                        <img src="https://github.com/tradinginvestment/tradinginvestment.github.io/blob/main/crypto/TRCUSDT.png" alt="USDT-ERC" class="crypto-logo">
+                        USDT ERC20 (Tron Network) Address: <strong>TS7JLDA7XUAWCYDHucZWf63DRp9viSHxto</strong>
                     </a></p>
 
                 <p>Pastikan menggunakan alamat yang sesuai dengan jenis cryptocurrency yang Anda pilih untuk transfer.</p>
