--- a/index.html
+++ b/index.html
@@ -130,13 +130,13 @@
                 <p><strong>2. Deposit melalui Cryptocurrency:</strong></p>
                 <!-- Bitcoin -->
                 <p><a href="USDT-BEP20 (BSC NETWORK):0x6050a098846c97f75157667ef577f789edbefdd9" class="crypto-link">
-                        <img src="https://github.com/tradinginvestment/tradinginvestment.github.io/blob/main/crypto/BEP20USDT.png" alt="USDT-BEP20" class="crypto-logo">
+                        <img src="https://raw.githubusercontent.com/tradinginvestment/tradinginvestment.github.io/refs/heads/main/crypto/BEP20USDT.png" alt="USDT-BEP20" class="crypto-logo">
                         USDT BEP20 (BSC/ETH NETWORK) Address: <strong>0x6050a098846c97f75157667ef577f789edbefdd9</strong>
                     </a></p>
 
                 <!-- Ethereum -->
                 <p><a href="USDT-ERC:TS7JLDA7XUAWCYDHucZWf63DRp9viSHxto" class="crypto-link">
-                        <img src="https://github.com/tradinginvestment/tradinginvestment.github.io/blob/main/crypto/TRCUSDT.png" alt="USDT-ERC" class="crypto-logo">
+                        <img src="https://raw.githubusercontent.com/tradinginvestment/tradinginvestment.github.io/refs/heads/main/crypto/TRCUSDT.png" alt="USDT-ERC" class="crypto-logo">
                         USDT ERC20 (Tron Network) Address: <strong>TS7JLDA7XUAWCYDHucZWf63DRp9viSHxto</strong>
                     </a></p>
 
