--- a/index.html
+++ b/index.html
@@ -129,16 +129,22 @@
 
                 <p><strong>2. Deposit melalui Cryptocurrency:</strong></p>
                 <!-- Bitcoin -->
-                <p><a href="USDT-BEP20 (BSC NETWORK):0x6050a098846c97f75157667ef577f789edbefdd9" class="crypto-link">
-                        <img src="https://raw.githubusercontent.com/tradinginvestment/tradinginvestment.github.io/refs/heads/main/crypto/BEP20USDT.png" alt="USDT-BEP20" class="crypto-logo">
-                        USDT BEP20 (BSC/ETH NETWORK) Address: <strong>0x6050a098846c97f75157667ef577f789edbefdd9</strong>
-                    </a></p>
+               <p>USDT BEP20 (BSC NETWORK) Address:</p>
+                <p><strong>0x6050a098846c97f75157667ef577f789edbefdd9</strong></p>
+                <p>Scan kode QR di bawah ini atau download untuk digunakan di aplikasi dompet Anda:</p>
+                <a href="https://api.qrserver.com/v1/create-qr-code/?data=0x6050a098846c97f75157667ef577f789edbefdd9&size=200x200" target="_blank">
+                    <img src="https://api.qrserver.com/v1/create-qr-code/?data=0x6050a098846c97f75157667ef577f789edbefdd9&size=200x200" alt="QR Code USDT BEP20" />
+                </a>
+                <p>Atau <a href="https://api.qrserver.com/v1/create-qr-code/?data=0x6050a098846c97f75157667ef577f789edbefdd9&size=200x200" download="USDT_BEP20_QR.png">download QR Code</a></p>
 
-                <!-- Ethereum -->
-                <p><a href="USDT-ERC:TS7JLDA7XUAWCYDHucZWf63DRp9viSHxto" class="crypto-link">
-                        <img src="https://raw.githubusercontent.com/tradinginvestment/tradinginvestment.github.io/refs/heads/main/crypto/TRCUSDT.png" alt="USDT-ERC" class="crypto-logo">
-                        USDT ERC20 (Tron Network) Address: <strong>TS7JLDA7XUAWCYDHucZWf63DRp9viSHxto</strong>
-                    </a></p>
+    <!-- USDT ERC20 (Tron Network) QR Code -->
+                <p>USDT ERC20 (Tron Network) Address:</p>
+                <p><strong>TS7JLDA7XUAWCYDHucZWf63DRp9viSHxto</strong></p>
+                <p>Scan kode QR di bawah ini atau download untuk digunakan di aplikasi dompet Anda:</p>
+                <a href="https://api.qrserver.com/v1/create-qr-code/?data=TS7JLDA7XUAWCYDHucZWf63DRp9viSHxto&size=200x200" target="_blank">
+                    <img src="https://api.qrserver.com/v1/create-qr-code/?data=TS7JLDA7XUAWCYDHucZWf63DRp9viSHxto&size=200x200" alt="QR Code USDT ERC20" />
+                </a>
+                <p>Atau <a href="https://api.qrserver.com/v1/create-qr-code/?data=TS7JLDA7XUAWCYDHucZWf63DRp9viSHxto&size=200x200" download="USDT_ERC20_QR.png">download QR Code</a></p>
 
                 <p>Pastikan menggunakan alamat yang sesuai dengan jenis cryptocurrency yang Anda pilih untuk transfer.</p>
 
