--- a/index.html
+++ b/index.html
@@ -122,10 +122,15 @@
                 <h4 class="mb-0">Cara Melakukan Deposit</h4>
             </div>
             <div class="card-body">
-                <p><strong>1. Rekening untuk Transfer (Bank):</strong></p>
-                <p>Nomor Rekening: <strong>123-456-7890</strong></p>
-                <p>Nama Pemilik Rekening: <strong>John Doe</strong></p>
-                <p>Bank: <strong>Bank ABC</strong></p>
+                <p><strong>1. Rekening untuk Transfer (Bank-BRI):</strong></p>
+                <p>Nomor Rekening: <strong>480801039553533</strong></p>
+                <p>Nama Pemilik Rekening: <strong>Muhammad Noer</strong></p>
+                <p>Bank: <strong>Bank BRI</strong></p>
+
+                <p><strong>1. Rekening untuk Transfer (Bank-Mandiri):</strong></p>
+                <p>Nomor Rekening: <strong>1460021069724</strong></p>
+                <p>Nama Pemilik Rekening: <strong>Muhammad Noer</strong></p>
+                <p>Bank: <strong>Bank Mandiri</strong></p>
 
                 <p><strong>2. Deposit melalui Cryptocurrency:</strong></p>
                 <!-- Bitcoin -->
