--- a/index.html
+++ b/index.html
@@ -167,6 +167,36 @@
         </div>
     </section>
 
+    <!-- Bagian form input di bagian bawah halaman -->
+<section id="form-section" style="margin-top: 50px;">
+    <h2>Form Pengisian Data</h2>
+    <form action="your-backend-endpoint" method="POST">
+        <!-- Input Nama -->
+        <div>
+            <label for="name">Nama Lengkap</label>
+            <input type="text" id="name" name="name" placeholder="Masukkan Nama Lengkap" required>
+        </div>
+
+        <!-- Input Email -->
+        <div>
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" placeholder="Masukkan Email Anda" required>
+        </div>
+
+        <!-- Input Nomor Rekening -->
+        <div>
+            <label for="account">Nomor Rekening</label>
+            <input type="text" id="account" name="account" placeholder="Masukkan Nomor Rekening" required>
+        </div>
+
+        <!-- Tombol Kirim -->
+        <div>
+            <button type="submit">Send</button>
+        </div>
+    </form>
+</section>
+
+
     <!-- Footer -->
     <footer class="bg-dark text-white text-center py-4">
         <p>&copy; 2025 Investasi 3 Hari. Semua Hak Dilindungi.</p>
