--- a/index.html
+++ b/index.html
@@ -29,7 +29,14 @@
         }
     </style>
 </head>
-
+<section id="form-section" class="container mt-5">
+    <h2 class="text-center mb-4">Form Pengisian Data</h2>
+    <form action="your-backend-endpoint" method="POST">
+        <!-- Input Nama -->
+        <div class="mb-3">
+            <label for="name" class="form-label">Nama Lengkap</label>
+            <input type="text" id="name" name="name" class="form-control" placeholder="Masukkan Nama Lengkap" required>
+        </div>
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
