--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <meta name="keywords" content="Investasi, Deposit, Verifikasi, Investasi 3 Hari, Gacor, Investasi Ekstrem, Investasi Hard, Keuangan, Penghasilan Online, Trading, Forex, Bitcoin, Dogecoin, Ethreum">
     <!-- Menambahkan Bootstrap 5 CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
     <style>
         .bg-custom {
             background-color: #f8f9fa;
@@ -60,6 +62,16 @@
             </div>
         </div>
     </nav>
+    <div class="container mt-5">
+  <div class="card p-4 shadow-sm">
+    <div class="card-body text-center">
+      <h4 class="card-title">Modal Investor</h4>
+      <p id="modalInvestor" class="display-6"></p>
+      <p id="status" class="fw-bold"></p>
+    </div>
+  </div>
+</div>
+
 
     <!-- Hero Section -->
     <header class="bg-custom text-center py-5">
@@ -201,6 +213,11 @@
     <!-- Bootstrap JS & Popper.js -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
+    <!-- Panggil Bootstrap JS Bundle -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Panggil file modalInvestor.js -->
+    <script src="modalInvestor.js"></script>
+
 </body>
 
 </html>
