--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
     <!-- Panggil Bootstrap JS Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Panggil file modalInvestor.js -->
-    <script src="modalInvestor.js"></script>
+    <script src="vasmar/hamdate.js"></script>
 
 </body>
 
