--- a/index.html
+++ b/index.html
@@ -138,13 +138,13 @@
             </div>
             <div class="card-body">
                 <p><strong>1. Rekening untuk Transfer (Bank-BRI):</strong></p>
-                <p>Nomor Rekening: <strong>480801039553533</strong></p>
-                <p>Nama Pemilik Rekening: <strong>Muhammad Noer</strong></p>
+                <p>Nomor Rekening: <strong></strong></p>
+                <p>Nama Pemilik Rekening: <strong></strong></p>
                 <p>Bank: <strong>Bank BRI</strong></p>
 
                 <p><strong>1. Rekening untuk Transfer (Bank-Mandiri):</strong></p>
-                <p>Nomor Rekening: <strong>1460021069724</strong></p>
-                <p>Nama Pemilik Rekening: <strong>Muhammad Noer</strong></p>
+                <p>Nomor Rekening: <strong></strong></p>
+                <p>Nama Pemilik Rekening: <strong></strong></p>
                 <p>Bank: <strong>Bank Mandiri</strong></p>
 
                 <p><strong>2. Deposit melalui Cryptocurrency:</strong></p>
