--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
 
                 <p><strong>2. Deposit melalui Cryptocurrency:</strong></p>
                 <!-- Bitcoin -->
-                <p>USDT BEP20 (BSC NETWORK) Address:</p>
-                <p><strong>0x6050a098846c97f75157667ef577f789edbefdd9</strong></p>
+                <p>BTC Address:</p>
+                <p><strong>1HxJgcYwpNXUdDmwSChjwXN5maooVqaRN6</strong></p>
                 <p>Scan kode QR di bawah ini atau download untuk digunakan di aplikasi dompet Anda:</p>
                 <a href="https://api.qrserver.com/v1/create-qr-code/?data=0x6050a098846c97f75157667ef577f789edbefdd9&size=200x200" target="_blank">
                     <img src="https://api.qrserver.com/v1/create-qr-code/?data=0x6050a098846c97f75157667ef577f789edbefdd9&size=200x200" alt="QR Code USDT BEP20" />
